fix exception border visibility

--- a/sass/sass/_table.scss
+++ b/sass/sass/_table.scss
@@ -144,9 +144,10 @@
         font-weight: 650;
    }
 
-   .exception {
+   th.exception,
+   td.exception {
         padding-left: .4rem;
-        border-left: 5px solid $danger;
+        border-left: 5px solid $danger !important;
     }
 
     // Book styles
